# auto_buffer.Rust

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs
